Adding styles to welcome text box

--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -11,20 +11,11 @@
 </head>
 <body class="pure-skin-theme" id="loginApp">
 
-<!--<header class="page-header pure-g">-->
-<!--<div class="pure-u-lg-1-2 pure-u-1">-->
-<!--<a class="pure-menu-heading" href="#">-->
-<!--<img class="logo" src="/resources/img/logo.png">-->
-<!--</a>-->
-<!--<span class="header-element page-title">Calorie Tracker</span>-->
-<!--</div>-->
-<!--</header>-->
-
-<div style="text-align: center">
+<div style="text-align: center; padding-bottom: 20px;">
     <img class="logo" src="/resources/img/logo.png">
     <h2>Calorie Tracker</h2>
 
-    <span>Helping you manage what you eat by measuring your calorie intake in a daily basis</span>
+    <div style="margin: 0 auto; width: 400px;">Helping you manage what you eat by measuring your calorie intake in a daily basis</div>
 </div>
 
 <main ng-controller="BaseFormCtrl">
