--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -51,13 +51,15 @@
                     </div>
                 </fieldset>
                 <button type="submit" class="pure-button pure-input-1 pure-button-primary">Log In</button>
+                <!-- <a class="forgot-password-link" href="/resources/public/#">Forgot password?</a> -->
                 <a class="new-user-link" href="/resources/public/new-user.html">New user?</a>
-
             </form>
         </div>
 
 
     </div>
+
+    <a class="privacy-policy" href="/resources/public/#">Privacy Policy</a>
 
 </main>
 
