Privacy policy button changes

--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -59,7 +59,7 @@
 
     </div>
 
-    <a class="privacy-policy" href="/resources/public/#">Privacy Policy</a>
+    <a class="privacy-policy" href="">Privacy Policy</a>
 
 </main>
 
