--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -59,7 +59,9 @@
 
     </div>
 
+    <div style="text-align: center;">
     <a class="privacy-policy" href="">Privacy Policy</a>
+    </div>
 
 </main>
 
