Changes to calories

--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -24,20 +24,20 @@
         </a>
         <span class="header-element page-title">Calories Tracker</span>
 
-        <div class="today-calories-container">
+        <!--<div class="today-calories-container">
             <div class="today-calories {{vm.caloriesStatusStyle}}">
                 Today' calories:
                 <div class="today-calories-placeholder" ng-hide="vm.todaysCalories"></div>
                 <span ng-cloak>{{vm.todaysCalories}}</span>
             </div>
-        </div>
+        </div>-->
 
     </div>
     <div class="pure-u-lg-1-2 pure-u-1 utilities">
         <div class="header-element">
-            <!--Today's Calories
+            Today's Calories
             <div class="today-calories-placeholder" ng-hide="vm.todaysCalories"></div>
-                <span ng-cloak>{{vm.todaysCalories}}</span>-->
+                <span ng-cloak>{{vm.todaysCalories}}</span>
             Today's Goal
             <input tabindex="10" class="max-cal" type="number" ng-model="vm.maxCaloriesPerDay"
                    ng-model-options="{'updateOn':'blur'}" ng-blur="updateMaxCaloriesPerDay()">
