--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -24,29 +24,33 @@
         </a>
         <span class="header-element page-title">Calories Tracker</span>
 
-        <div class="today-calories-container">
-            <div class="today-calories {{vm.caloriesStatusStyle}}">
-                Today' calories:
-                <div class="today-calories-placeholder" ng-hide="vm.todaysCalories"></div>
-                <span ng-cloak>{{vm.todaysCalories}}</span>
-            </div>
-        </div>
+<!--         <div class="today-calories-container"> -->
+<!--             <div class="today-calories {{vm.caloriesStatusStyle}}"> -->
+<!--                 Today' calories: -->
+<!--                 <div class="today-calories-placeholder" ng-hide="vm.todaysCalories"></div> -->
+<!--                 <span ng-cloak>{{vm.todaysCalories}}</span> -->
+<!--             </div> -->
+<!--         </div> -->
 
     </div>
     <div class="pure-u-lg-1-2 pure-u-1 utilities">
         <div class="header-element">
-            Max. calories
+            <span class="today-calories1 {{vm.caloriesStatusStyle}}">Today's Calories
+            <div class="today-calories-placeholder" ng-hide="vm.todaysCalories"></div>
+                <span ng-cloak>{{vm.todaysCalories}}</span></span> 
+           <span class="goal"> Today's Goal
             <input tabindex="10" class="max-cal" type="number" ng-model="vm.maxCaloriesPerDay"
-                   ng-model-options="{'updateOn':'blur'}" ng-blur="updateMaxCaloriesPerDay()">
+                   ng-model-options="{'updateOn':'blur'}" ng-blur="updateMaxCaloriesPerDay()"></span> 
         </div>
         <div class="header-element username">
             <div class="username-placeholder" ng-hide="vm.userName"></div>
             <span ng-cloak>{{vm.userName}}</span>
         </div>
         <div class="header-element">
-            <a class="logout" href="#" ng-click="logout()">Logout</a>
+            <a class="logout" href="#" ng-click="logout()">Logout</a>   
         </div>
     </div>
+
 </header>
 
 <main class="container not-ready" ng-class="{'app-ready': vm.appReady}" ng-cloak>
