Number of servings

--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -135,8 +135,8 @@
                     <th>Date/Time</th>
                     <th>Meal Type</th>
                     <th>Description</th>
-                     <th>Calories per servings</th>
-                    <th>Total</th>
+                     <th>Calories per serving</th>
+                    <th>Number of servings</th>
                 </tr>
 
                 </thead>
