--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -69,12 +69,12 @@
 
                 <div class="pure-u-sm-1-2 pure-u-1 from-field">
                     <label>From Date </label>
-                    <input tt-date-picker name="fromDate" ng-model="vm.fromDate">
+                    <input tt-date-picker name="fromDate" ng-model="vm.fromDate" id="from-date">
                 </div>
 
                 <div class="pure-u-sm-1-2 pure-u-1 to-field">
                     <label>To Date</label>
-                    <input tt-date-picker name="toDate" ng-model="vm.toDate">
+                    <input tt-date-picker name="toDate" ng-model="vm.toDate" id="to-date">
                 </div>
 
                 <div class="pure-u-sm-1-2 pure-u-1 from-field from-to-time">
