Id for time added

--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -79,12 +79,12 @@
 
                 <div class="pure-u-sm-1-2 pure-u-1 from-field from-to-time">
                     <label>From Time</label>
-                    <input tt-time-picker name="fromTime" ng-model="vm.fromTime">
+                    <input tt-time-picker name="fromTime" ng-model="vm.fromTime" id="from-time">
                 </div>
 
                 <div class="pure-u-sm-1-2 pure-u-1 to-field from-to-time">
                     <label>To Time</label>
-                    <input tt-time-picker name="toTime" ng-model="vm.toTime">
+                    <input tt-time-picker name="toTime" ng-model="vm.toTime" id="to-time">
                 </div>
 
                 <div class="pure-u-1 search">
