--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -26,7 +26,7 @@
 
         <div class="today-calories-container">
             <div class="today-calories {{vm.caloriesStatusStyle}}">
-                Today' calories:
+                Today's calories:
                 <div class="today-calories-placeholder" ng-hide="vm.todaysCalories"></div>
                 <span ng-cloak>{{vm.todaysCalories}}</span>
             </div>
