--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -51,6 +51,7 @@
                     </div>
                 </fieldset>
                 <button type="submit" class="pure-button pure-input-1 pure-button-primary">Log In</button>
+                <a class="forgot-password-link" href="/resources/public/forgot-password.html">Forgot Password?</a>
                 <a class="new-user-link" href="/resources/public/new-user.html">New user?</a>
 
             </form>
