--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </fieldset>
-                <button type="submit" class="pure-button pure-input-1 pure-button-primary">Log In</button>
+                <button type="submit" class="pure-button pure-input-1 pure-button-primary" id="login">Log In</button>
                 <a class="forgot-password-link" href="/resources/public/forgot-password.html">Forgot Password?</a>
                 <a class="new-user-link" href="/resources/public/new-user.html">New user?</a>
 
