--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/resources/public/css/pure-theme.css">
     <link rel="stylesheet" type="text/css" href="/resources/public/css/calories-tracker.css">
 </head>
-<body class="pure-skin-theme" id="loginApp">
+<body class="pure-skin-theme welcome-img" id="loginApp">
 
 <div style="text-align: center; padding-bottom: 20px;">
     <img class="logo" src="/resources/img/logo.png">
