--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -12,7 +12,7 @@
 <body class="pure-skin-theme welcome-img" id="loginApp">
 
 <div style="text-align: center; padding-bottom: 20px;">
-    <img class="logo" src="/resources/img/logo.png">
+    <img class="logo" src="/resources/img/logo.png" alt="calories tracker logo">
     <h2>Calorie Tracker</h2>
 
     <div class="welcome-message" style="margin: 0 auto; width: 400px;">Helping you manage what you eat by measuring your calorie intake in a daily basis</div>
