Added Copy button

--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -100,6 +100,9 @@
                 <button type="submit" class="pure-button" ng-click="delete()" ng-disabled="vm.isSelectionEmpty"
                         disabled>Delete
                 </button>
+                <button type="submit" class="pure-button" ng-click="copy()" ng-disabled="vm.isSelectionEmpty"
+                        disabled>Copy
+                </button>
             </div>
 
             <table class="pure-table">
