Adding alt text and lang

--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -20,7 +20,7 @@
     <div class="pure-u-lg-1-2 pure-u-1">
 
         <a class="pure-menu-heading" href="#">
-            <img class="logo" src="/resources/img/logo.png">
+            <img class="logo" src="/resources/img/logo.png" alt="calories tracker logo">
         </a>
         <span class="header-element page-title">Calories Tracker</span>
 
