--- a/src/main/webapp/resources/public/forgot-password.html
+++ b/src/main/webapp/resources/public/forgot-password.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login Calorie Tracker</title>
@@ -12,7 +12,7 @@
 <body class="pure-skin-theme" id="forgotPassword">
 
 <div style="text-align: center; padding-bottom: 20px;">
-    <img class="logo" src="/resources/img/logo.png">
+    <img class="logo" src="/resources/img/logo.png" alt="calories tracker logo">
     <h2>Calorie Tracker</h2>
 
     <div class="welcome-message" style="margin: 0 auto; width: 400px;">Helping you manage what you eat by measuring your
