--- a/src/main/webapp/resources/public/new-user.html
+++ b/src/main/webapp/resources/public/new-user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Create User Calorie Tracker</title>
@@ -14,7 +14,7 @@
 <header class="page-header pure-g">
     <div class="pure-u-lg-1-2 pure-u-1">
         <a class="pure-menu-heading" href="#">
-            <img class="logo" src="/resources/img/logo.png">
+            <img class="logo" src="/resources/img/logo.png" alt="calories tracker logo">
         </a>
         <span class="header-element page-title">Calorie Tracker</span>
     </div>
