--- a/src/main/webapp/resources/public/login.html
+++ b/src/main/webapp/resources/public/login.html
@@ -15,7 +15,7 @@
     <img class="logo" src="/resources/img/logo.png" alt="calories tracker logo">
     <h2>Calorie Tracker</h2>
 
-    <div class="welcome-message" style="margin: 0 auto; width: 400px;">Helping you manage what you eat by measuring your calorie intake in a daily basis</div>
+    <div class="welcome-message" style="margin: 0 auto; width: 400px;">Helping you manage what you eat by measuring your calorie intake on a daily basis</div>
 </div>
 
 <main ng-controller="BaseFormCtrl">
