--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -35,7 +35,7 @@
     </div>
     <div class="pure-u-lg-1-2 pure-u-1 utilities">
         <div class="header-element">
-            Goal calories:
+            <span id="goal-calories">Goal calories:<span>
             <input class="max-cal" type="number" ng-model="vm.maxCaloriesPerDay"
                    aria-label="Max Calories"
                    ng-model-options="{'updateOn':'blur'}" ng-blur="updateMaxCaloriesPerDay()">
