Table labels have changed

--- a/src/main/webapp/resources/calories-tracker.html
+++ b/src/main/webapp/resources/calories-tracker.html
@@ -108,12 +108,16 @@
 
             <table class="pure-table">
                 <thead>
-                <tr>
+                 <tr>
                     <th class="selection-column"></th>
                     <th>Date/Time</th>
+                    <th>Meal Type</th>
                     <th>Description</th>
-                    <th>Total Calories</th>
+                     <th>Servings</th>
+                     <th>Calories per serving</th>
+                    <th>Total</th>
                 </tr>
+
                 </thead>
 
                 <tbody>
